--- a/index.html
+++ b/index.html
@@ -5,37 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apex Cycles</title>
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/671a055caf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body>
+  <body class="fade-in">
     <div class="nav">
       <img class="logo" src="images/file.png" alt="logo" />
     </div>
+
     <div class="cover">
       <img class="cover-image" src="images/cover.png" alt="cover" />
       <div class="about">
         <hr />
-        Serving Davis, CA for all its cycling needs since 2001.
+        Serving Davis, CA for all its cycling needs since 2002.
         <br />
         Focused on bringing the best gear and improving bikes
         <br />
-        for optimal performance"
+        for optimal performance.
       </div>
     </div>
+    <hr />
     <div class="information">
       <div class="contact">
-        <div class="address">
-          <p style="font-weight: bold">Address</p>
-          <p>105 E St Suite 2C,</p>
-          <p>Davis,</p>
-          <p>CA 95616</p>
-        </div>
-        <div class="hours">
+        <div class="number">
+          <p style="font-weight: bold">Number</p>
+          <p>530.475.2739</p>
+          <br />
+          <p style="font-weight: bold">Email</p>
+          <p>apexbikes@gmail.com</p>
+          <br />
           <p style="font-weight: bold">Hours</p>
-          http://127.0.0.1:5500/images/cover.png
           <p>Monday to Friday: 9AM - 5PM</p>
+          <br />
+          <p style="font-weight: bold">Proud Carriers Of</p>
+          <div id="brands">
+            <div>
+              <img
+                class="brand1"
+                style="height: 50px; width: auto"
+                src="images/canyon.png"
+              />
+              <img class="brand2" src="images/trek.png" />
+            </div>
+            <div>
+              <img class="brand3" src="images/santa-cruz.png" />
+              <img class="brand4" src="images/mongoose.png" />
+            </div>
+            </div>
+          </div>
+          <div class="address">
+            <p style="font-weight: bold">Address</p>
+            <p>105 E St Suite 2C,</p>
+            <p>Davis,</p>
+            <p>CA 95616</p>
+            <br />
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6241.253752890193!2d-121.7408308!3d38.54236840000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80852974f62f0fdb%3A0x3895639cf3bd7d9b!2sAPEX%20Mobility%2C%20LLC!5e0!3m2!1sen!2sus!4v1720653255484!5m2!1sen!2sus"
+              width="100%"
+              height="50%"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </div>
-      <hr />
+    </div>
+    <hr />
+    <div class="footer">
+      <a href="https://www.instagram.com/apexcycles/?hl=en">
+        <i class="fa-brands fa-instagram"></i
+      ></a>
+      <a href="https://www.instagram.com/apexcycles/?hl=en">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/apexcycles/?hl=en">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="https://www.instagram.com/apexcycles/?hl=en">
+        <i class="fa-brands fa-yelp"></i>
+      </a>
     </div>
   </body>
 </html>
