add button and style on button

--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
           <img class="cover-image" src="images/cover.png" alt="cover" />
           <div class="about">
             <hr />
-            Serving Davis, CA for all its cycling needs since 2002.
+            Serving Davis, CA for all its cycling needs since 2003.
             <br />
             Focused on bringing the best gear and improving bikes
             <br />
             for optimal performance. Mobile services included.
           </div>
-          <!-- <div class="appointment"> 
-            <button>Book an Appointment</button>
-          </div> -->
+          <div>
+              <button class="appointment">
+                <a href="https://docs.google.com/forms/d/1Xi4lkYQrZrQ3dTv4pKIOCGznmRkIehN2ivPHzUR569Q/edit?ts=668f474f">
+                BOOK AN APPOINTMENT</a>
+              </button>
+          </div>
         </div>
         <hr />
         <!-- Info -->
