give email actual redirect

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <div>
             <p style="font-weight: bold">Email</p>
-            <p>apexbikes@gmail.com</p>
+            <p><a href="mailto:apexbikes@gmail.com">apexbikes@gmail.com</a></p>
           </div>
           <div>
             <p style="font-weight: bold">Hours</p>
