new logo, fixing mobile and web ratios

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- <div class="left-nav">Home
       </div> -->
       <div>
-      <img class="logo" src="images/file.png" alt="logo" />
+      <img class="logo" src="images/logo.png" alt="logo" style="height: 70px; width: auto; margin-top: 10px;"/>
       </div>
   
 
@@ -38,7 +38,7 @@
           <div>
               <button class="appointment">
                 <a href="https://docs.google.com/forms/d/1Xi4lkYQrZrQ3dTv4pKIOCGznmRkIehN2ivPHzUR569Q/edit?ts=668f474f">
-                BOOK AN APPOINTMENT</a>
+                BOOK APPOINTMENT OR <br>MOBILE SERVICE</a>
               </button>
           </div>
         </div>
@@ -86,42 +86,56 @@
       <!-- Brands/Sponsers -->
       <hr />
       <div id="brands">
+        <a href="https://usa.cinelli-milano.com/">
         <img
           class="brand1"
           style="height: 25px; width: auto"
-          src="images/canyon.png"
+          src="images/cinelli.png"
         />
+        </a>
+        <a href="https://www.wilier.com/en">
         <img
           class="brand2"
           style="height: 50px; width: auto"
-          src="images/trek.png"
+          src="images/wilier.png"
         />
-
+      </a>
+        <a href="https://www.aventon.com/">
         <img
           class="brand3"
           style="height: 50px; width: auto"
-          src="images/santa-cruz.png"
+          src="images/aventon.png"
         />
+      </a>
+        <a href="https://emojobike.com/">
         <img
           class="brand4"
           style="height: 50px; width: auto"
-          src="images/mongoose.png"
+          src="images/emojo.png"
         />
+      </a>
+        <a href="https://www.somafab.com/">
+        <img
+        class="brand4"
+        style="height: 50px; width: auto"
+        src="images/soma.png"
+      />
+    </a>
       </div>
     </div>
     <hr />
     <div class="footer">
       <a href="https://www.instagram.com/apexcycles/?hl=en">
-        <i class="fa-brands fa-instagram"></i
+        <i class="fa-brands fa-instagram fa-2x"></i
       ></a>
-      <a href="https://www.instagram.com/apexcycles/?hl=en">
-        <i class="fa-brands fa-facebook"></i>
+      <a href="https://www.facebook.com/apexcycles/">
+        <i class="fa-brands fa-facebook fa-2x"></i>
       </a>
-      <a href="https://www.instagram.com/apexcycles/?hl=en">
-        <i class="fa-brands fa-linkedin"></i>
+      <a href="https://www.linkedin.com/in/aarondcurtin/">
+        <i class="fa-brands fa-linkedin fa-2x"></i>
       </a>
-      <a href="https://www.instagram.com/apexcycles/?hl=en">
-        <i class="fa-brands fa-yelp"></i>
+      <a href="https://www.yelp.com/biz/apex-cycles-and-service-davis-3">
+        <i class="fa-brands fa-yelp fa-2x"></i>
       </a>
     </div>
   </body>
