add important to mobile size to scale icons correctly

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- <div class="left-nav">Home
       </div> -->
       <div>
-      <img class="logo" src="images/logo.png" alt="logo" style="height: 70px; width: auto; margin-top: 10px;"/>
+      <img class="logo" src="images/logo.png" alt="logo" style="height: 5em; width: auto; margin-top: 10px;"/>
       </div>
   
 
@@ -55,7 +55,7 @@
           </div>
           <div>
             <p style="font-weight: bold">Hours</p>
-            <p>Monday to Friday: 9AM - 5PM</p>
+            <p>Monday to Friday 9AM - 5PM</p>
           </div>
         </div>
         <!-- Address -->
@@ -126,16 +126,16 @@
     <hr />
     <div class="footer">
       <a href="https://www.instagram.com/apexcycles/?hl=en">
-        <i class="fa-brands fa-instagram fa-2x"></i
+        <i class="fa-brands fa-instagram "></i
       ></a>
       <a href="https://www.facebook.com/apexcycles/">
-        <i class="fa-brands fa-facebook fa-2x"></i>
+        <i class="fa-brands fa-facebook "></i>
       </a>
       <a href="https://www.linkedin.com/in/aarondcurtin/">
-        <i class="fa-brands fa-linkedin fa-2x"></i>
+        <i class="fa-brands fa-linkedin "></i>
       </a>
       <a href="https://www.yelp.com/biz/apex-cycles-and-service-davis-3">
-        <i class="fa-brands fa-yelp fa-2x"></i>
+        <i class="fa-brands fa-yelp "></i>
       </a>
     </div>
   </body>
