fixed book button

--- a/index.html
+++ b/index.html
@@ -115,12 +115,20 @@
         />
       </a>
         <a href="https://www.somafab.com/">
-        <img
-        class="brand4"
-        style="height: 50px; width: auto"
-        src="images/soma.png"
-      />
-    </a>
+          <img
+          class="brand4"
+          style="height: 50px; width: auto"
+          src="images/soma.png"
+          />
+        </a>
+        <a href="https://ritcheylogic.com/">
+          <img
+          class="brand4"
+          style="height: 50px; width: auto"
+          src="images/ritchey.png"
+          />
+        </a>
+    
       </div>
     </div>
     <hr />
