--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
           src="images/ritchey.png"
           />
         </a>
+        <a href="https://www.fyxation.com/">
+          <img
+          class="brand4"
+          style="height: 50px; width: auto"
+          src="images/fyxation.png"
+          />
+        </a>
     
       </div>
     </div>
