address and hours chane

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           </div>
           <div>
             <p style="font-weight: bold">Hours</p>
-            <p>Monday to Friday 9AM - 5PM</p>
+            <p>Monday to Friday 10AM - 6PM</p>
+            <p>Saturday and Sunday by Appointment</p>
           </div>
         </div>
         <!-- Address -->
@@ -64,7 +65,7 @@
           <div class="address">
             <div class="writtenAddress">
               <p style="font-weight: bold">Address</p>
-              <p>105 E St Suite 2C,</p>
+              <p>231 G Street Suite 7,</p>
               <p>Davis,</p>
               <p>CA 95616</p>
               <br />
